# 2026-minedu-reportes

./: .gitignore  Informe_Producto_5_08012025.docx  LICENSE  Producto_2_v06.03.2024 (2).docx  Producto_3_v170524 modificado.docx  README.md  compare.py  pyproject.toml
data/producto_2_vs_sistematizacion/: Producto_2_v06.03.2024 (2).txt  Sistematización de experiencias y buenas prácticas para la igualdad de género en el ámbito universitario.txt
data/producto_3_vs_estudio_desigualdades/: Producto_3_v170524 modificado.txt
data/producto_5_vs_propuesta_brechas/: Informe_Producto_5_08012025.txt
minedu_files/: Estudio para la identificación de desigualdades y barreras de acceso y permanencia en la educación superior universit.txt  Propuesta para reduccion de brechas.txt
output/: producto_2_vs_minedu_sistematización.txt  producto_3_vs_minedu_estudio_desigualdades.txt  producto_5_vs_minedu_propuesta_reducción_brechas.txt  resumen.txt
tests/: test_compare.py
